# 3d-engine-old

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  imgui.ini  run.sh
Documentation/html/: annotated.html  annotated_dup.js  camera_8h_source.html  class_camera-members.html  class_camera.html  class_cube_map-members.html  class_cube_map.html  class_cube_map.js  class_default_gui-members.html  class_default_gui.html  class_default_gui.js  class_directional_light-members.html  class_directional_light.html  class_directional_light.js  class_framebuffer-members.html  class_framebuffer.html  class_light-members.html  class_light.html  class_light.js  class_logger-members.html  class_logger.html  class_logger.js  class_mesh-members.html  class_mesh.html  class_mesh.js  class_model-members.html  class_model.html  class_model.js  class_point_light-members.html  class_point_light.html  class_point_light.js  class_post_processing-members.html  class_post_processing.html  class_post_processing.js  class_scene-members.html  class_scene.html  class_scene.js  class_shader-members.html  class_shader.html  class_shader.js  (+46 more)
Documentation/html/search/: all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_5.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  searchdata.js
Documentation/latex/: annotated.tex  camera_8h_source.tex  class_camera.tex  class_cube_map.tex  class_default_gui.eps  class_default_gui.tex  class_directional_light.tex  class_framebuffer.tex  class_light.tex  class_logger.tex  class_mesh.tex  class_model.tex  class_point_light.eps  class_point_light.tex  class_post_processing.tex  class_scene.tex  class_scene_parameters.eps  class_shader.tex  class_texture.tex  class_triple.tex  class_user_parameters.eps  class_user_parameters.tex  cubemap_8h_source.tex  directional_light_8h_source.tex  files.tex  framebuffer_8h_source.tex  gui_8h_source.tex  hierarchy.tex  light_8h_source.tex  logger_8h_source.tex  mesh_8h_source.tex  model_8h_source.tex  post_processing_8h_source.tex  refman.tex  scene_8h_source.tex  shader_8h_source.tex  struct_bloom__t.tex  struct_chromatic_aberation__t.tex  struct_hdr__t.tex  texture_8h_source.tex  (+1 more)
include/: CMakeLists.txt
include/doctest/: doctest.h
models/: blitz.fbx
models/fortressObj/: household.mtl
models/fortressScaled/: noSky.mtl
models/light/: sphere.fbx
models/postProcessing/: quad.mtl
models/test/: quad.mtl
public/html/: annotated.html  annotated_dup.js  camera_8h_source.html  class_camera.html  class_camera.js  class_cube_map-members.html  class_cube_map.html  class_default_gui-members.html  class_default_gui.html  class_directional_light-members.html  class_framebuffer.js  class_light.html  class_mesh-members.html  class_mesh.html  class_model-members.html  class_model.html  class_point_light.html  class_post_processing.html  class_scene-members.html  class_scene.js  class_scene_parameters-members.html  class_scene_parameters.html  class_scene_parameters.js  class_shader.js  class_texture.html  class_user_parameters-members.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  framebuffer_8h_source.html  gui_8h_source.html  hierarchy.html  mesh_8h_source.html  model_8h_source.html  navtreedata.js  navtreeindex0.js  pages.html  post_processing_8h_source.html  struct_bloom__t-members.html  struct_hdr__t.html
public/html/search/: all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_c.js  all_e.js  classes_2.js  classes_4.js  classes_7.js  classes_a.js  functions_1.js  functions_6.js  functions_c.js  pages_0.js
public/latex/: camera_8h_source.tex  class_cube_map.tex  class_default_gui.eps  class_directional_light.eps  class_directional_light.tex  class_framebuffer.tex  class_light.eps  class_mesh.eps  class_post_processing.tex  class_scene.tex  class_scene_parameters.tex  class_shader.tex  cubemap_8h_source.tex  gui_8h_source.tex  hierarchy.tex  light_8h_source.tex  logger_8h_source.tex  main_8h_source.tex  md__r_e_a_d_m_e.tex  point_light_8h_source.tex  struct_vertex.tex  triple_8h_source.tex
shaders/: cubemap.fs  cubemap.vs  default.fs  default.vs  hdrShader.fs  light.fs  outline.fs  outline.vs  postProcessing.fs  postProcessing.vs
shaders/postProcessing/: boxBlur.frag  chromaticAberation.fs  hdrShader.fs
src/: Mesh.cpp  camera.cpp  cubemap.cpp  framebuffer.cpp  main.cpp  mesh.cpp  model.cpp  postprocessing.cpp  scene.cpp  shader.cpp  texture.cpp
src/core/: scene.cpp
src/gui/: gui.cpp  userParametersGui.cpp
src/headers/: Camera.h  Mesh.h  Texture.h  camera.h  cubemap.h  directionalLight.h  framebuffer.h  gui.h  light.h  logger.h  mesh.h  model.h  pointLight.h  postProcessing.h  scene.h  shader.h  texture.h  triple.h
src/meshes/: directionalLight.cpp  light.cpp  pointLight.cpp
test/: CMakeLists.txt  run_test.sh  test.cpp
test/mock/: cameraMock.h  cubemapMock.h
